src/test/ui/parser/issues/issue-66357-unexpected-unreachable.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:16
   |
LL | fn f() { |[](* }
   |                ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:135
   |
LL | fn f() { |[](* }
   |        -    - unclosed delimiter
   |        |
   |        unclosed delimiter
LL |
LL |
   |                                                                                                                                       ^

error: this file contains an unclosed delimiter
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:135
   |
LL | fn f() { |[](* }
   |        -    - unclosed delimiter
   |        |
   |        unclosed delimiter
LL |
LL |
   |                                                                                                                                       ^

error: expected one of `,` or `:`, found `(`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:13
   |
LL | fn f() { |[](* }
   |             ^ expected one of `,` or `:`

error: expected one of `&`, `(`, `)`, `-`, `...`, `..=`, `..`, `[`, `_`, `box`, `mut`, `ref`, `|`, identifier, or path, found `*`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:14
   |
LL | fn f() { |[](* }
   |              ^ expected one of 15 possible tokens

error: aborting due to 5 previous errors

